# kawin_agnos_ds_problem2

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: app_script.py  data_preprocessing_script.ipynb  data_preprocessing_script.py
src/data/processed/: association_rules.parquet  dict_icd10_master_word.pkl  dict_master_word_icd10.pkl  icd10_document_embeddings.pkl  icd10_document_metadata.parquet
src/data/raw/: [SAMPLE][CONFIDENTIAL] AI symptom picker data (Agnos candidate assignment) - ai_symptom_picker.csv
