[project]
name = "kawin-agnos-ds-problem2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "langchain-community>=0.3.27",
    "mlxtend>=0.23.4",
    "pandas>=2.3.1",
    "pyarrow>=21.0.0",
    "sentence-transformers>=5.1.0",
]
